polishing disucssion forms behavirou

--- a/views/admin-lte/discussion/addNewTopicModal.ejs
+++ b/views/admin-lte/discussion/addNewTopicModal.ejs
@@ -10,25 +10,36 @@
                             <h3 class="box-title">Add A New Topic</h3>
 
                             <div class="box-tools pull-right">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span
                                         aria-hidden="true">&times;</span></button>
                             </div>
                         </div>
                         <div class="box-body">
-                            <form class="" role="form" ng-submit="saveNewPost()">
+                            <form name="addTopicForm" role="form" ng-submit="saveNewPost(addTopicForm.$valid)" novalidate>
                                 <fieldset>
                                     <div class="control-group">
                                         <label class="control-label" for="title">Title</label>
+
                                         <p class="help-block">Title can contain any letters or numbers</p>
-                                        <div class="controls">
-                                            <input type="text" id="title" name="title" placeholder="" class="form-control"
-                                                   ng-model="formData.title">
+
+                                        <div class="controls"
+                                             ng-class="{ 'has-error' : addTopicForm.title.$invalid && !addTopicForm.$pristine }">
+                                            <input type="text" id="title" name="title" placeholder=""
+                                                   class="form-control"
+                                                   ng-model="formData.title"
+                                                   required
+                                                   ng-required="true"
+                                                    >
+                                            <p ng-show="addTopicForm.title.$invalid && !addTopicForm.$pristine"
+                                               class="help-block">Topic must contains title</p>
                                         </div>
                                     </div>
                                     <br>
+
                                     <div class="control-group">
                                         <label class="control-label">Content</label>
-                                        <div class="controls">
+
+                                        <div class="controls" >
                                             <wysiwyg textarea-id="Content"
                                                      textarea-class="form-control"
                                                      textarea-height="180px"
@@ -37,21 +48,25 @@
                                                      ng-model="formData.content"
                                                      textarea-menu="menu" >
                                             </wysiwyg>
+
                                         </div>
                                     </div>
 
                                     <div class="control-group">
                                         <br class="clear">
-                                            <span class="help-block" ng-show="errors">{{ errors }}</span>
-                                            <!-- Button -->
-                                            <div class="controls">
-                                                <button class="btn btn-md btn-primary">Save</button>
-                                                <button type="button" class="btn btn-md btn-primary"
-                                                        data-dismiss="modal" aria-label="Close"
-                                                        ng-click="cancel()">
-                                                    <span aria-hidden="true">Cancel</span>
-                                                </button>
-                                            </div>
+                                        <error-block ng-show="errors.length > 0" messages="errors"></error-block>
+                                        <!-- Button -->
+                                        <div class="controls">
+                                            <button class="btn btn-primary" ng-click="addTopicForm.$setDirty()"> Save
+                                                <spinner show="isLoading"></spinner>
+                                            </button>
+
+                                            <button type="button" class="btn btn-warning"
+                                                    data-dismiss="modal" aria-label="Close"
+                                                    ng-click="cancel()">
+                                                <span aria-hidden="true">Cancel</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </fieldset>
                             </form>
