--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -88,7 +88,7 @@
                                                data-toggle="modal" data-target="#editReplyModal"
                                                title="Edit"
                                                ng-click="editReply(re)"
-                                               class="btn btn-warning btn-xs"
+                                               class="btn btn-primary btn-xs"
                                                     >EDIT</a>
                                         </div>
                                         <div class="deleteReplyButton">
