--- a/views/admin-lte/discussion/addNewReplyModal.ejs
+++ b/views/admin-lte/discussion/addNewReplyModal.ejs
@@ -7,18 +7,21 @@
                 <div class="col-xs-12 col-lg-8 col-md-8 col-sm-8 col col-centered">
                     <div class="widget-item box no-border no-round">
                         <div class="box-header with-border">
-                            <h3 class="box-title">Add A Reply</h3>
+                            <h3 class="box-title">Add Reply</h3>
 
                             <div class="box-tools pull-right">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                                        ng-click="cancel()">
+                                    <span aria-hidden="true">&times;</span></button>
                             </div>
                         </div>
                         <div class="box-body">
-                            <form class="" role="form" ng-submit="saveNewReply()">
+                            <form name="addNewReplyForm" role="form" ng-submit="saveNewReply(addNewReplyForm.$valid)"
+                                  novalidate>
                                 <fieldset>
                                     <div class="control-group">
                                         <label class="control-label">Content</label>
+
                                         <div class="controls">
                                             <wysiwyg textarea-id="Content"
                                                      textarea-class="form-control"
@@ -26,23 +29,22 @@
                                                      textarea-name="Content"
                                                      textarea-required
                                                      ng-model="formNewData.content"
-                                                     textarea-menu="menu" >
+                                                     textarea-menu="menu">
                                             </wysiwyg>
                                         </div>
                                     </div>
 
                                     <div class="control-group">
                                         <br class="clear">
-                                            <span class="help-block" ng-show="errors">{{ errors }}</span>
-                                            <!-- Button -->
-                                            <div class="controls">
-                                                <button class="btn btn-md btn-primary">Save</button>
-                                                <button type="button" class="btn btn-md btn-primary"
-                                                        data-dismiss="modal" aria-label="Close"
-                                                        ng-click="cancel()">
-                                                    <span aria-hidden="true">Cancel</span>
-                                                </button>
-                                            </div>
+                                        <error-block ng-show="errors.length > 0" messages="errors"></error-block>
+                                        <!-- Button -->
+                                        <div class="controls">
+                                            <button class="btn btn-primary" ng-click="addNewReplyForm.$setDirty()">Save
+                                                <spinner show="isLoading"></spinner>
+                                            </button>
+
+                                            <cancel></cancel>
+                                        </div>
                                     </div>
                                 </fieldset>
                             </form>
