add button to open a new tab in links

--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -48,6 +48,7 @@
                             </span>
                         </div>
                         <div class="box-body">
+                            <a class="btn btn-primary" href="{{currentLink.content}}" target="_blank">open in a new tab</a>
                             <iframe ng-src="{{currentLinkUrl}}" class="link" frameborder="0"></iframe>
                         </div>
                     </div>
