--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -43,6 +43,14 @@
 
 #slideNavigationProgress{
   width: 100%;
+  height: 4pt;
+  background-color: #191919;
+}
+
+#slideNavigationCurrentProgress{
+  width:0%;
+  height: 100%;
+  background-color: yellow;
 }
 
 #slideNavigation{
