--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -29,7 +29,9 @@
                         </div>
                         <div id="annotationZone"></div>
                         <div id="slideNavigationWrapper">
-                          <div id="slideNavigationProgress"></div>
+                          <div id="slideNavigationProgress">
+                            <div id="slideNavigationCurrentProgress"></div>
+                          </div>
                           <div id="slideNavigation" class="row notSelectable" ng-cloak>
                             <div class="col-md-4 text-center"></div>
                               <div class="col-md-4 text-center"><div class="row">
@@ -38,7 +40,7 @@
                                 <span class="glyphicon glyphicon-triangle-right iconSlideNav" aria-hidden="true" ng-click="changePageNumber(1)"></span>
                               </div>
                             </div>
-                            <div class="col-md-4 text-right"><span class="glyphicon glyphicon-fullscreen iconSlideNav" aria-hidden="true"></span></div>
+                            <div class="col-md-4 text-right"><span id="btn-fullscreen" class="glyphicon glyphicon-fullscreen iconSlideNav" aria-hidden="true"></span></div>
                           </div>
                         </div>
                     </div>
@@ -201,6 +203,12 @@
 
 
 <script src="/slide-viewer/js/slideviewer.js"></script>
+<script src="/slide-viewer/js/jquery.fullscreen-min.js"></script>
+<script>
+  $( "#btn-fullscreen" ).click(function() {
+    $("#viewerWrapper").toggleFullScreen();
+  });
+</script>
 
 
 <script src="/jquery/jquery-ui.min.js"></script>
