--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -9,6 +9,8 @@
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link href="/gridstack/gridstack.min.css" rel="stylesheet" type="text/css" />
+    <link href="/quill/quill.base.css" rel="stylesheet" type="text/css" />
+    <link href="/quill/quill.snow.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="/favicon.png" type="image/png" />
 
     <!-- Themes -->
