--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -12,6 +12,8 @@
 <script src="/angular/angular-cookies.min.js"></script>
 <script src="/angular/bootstrap-colorpicker-module.js"></script>
 <script src="/angular/angular-wysiwyg.min.js"></script>
+<script src="/quill/quill.js"></script>
+<script src="/angular-quill/angular-quill.js"></script>
 <script src="/angular/ocLazyLoad.min.js"></script>
 <script src="/angular-sanitize/angular-sanitize.js"></script>
 <script src="/angulartics/src/angulartics.js"></script>
