--- a/views/admin-lte/discussion/addNewReplyModal.ejs
+++ b/views/admin-lte/discussion/addNewReplyModal.ejs
@@ -1,7 +1,8 @@
-<!-- course edit form -->
+<!-- reply form -->
 <div class="row">
     <div class="modal" id="addNewReplyModal" tabindex="-1" role="dialog"
          aria-labelledby="Reply Form" aria-hidden="true">
+
         <section class="content" ng-controller="ReplyController">
             <div class="row row-centered">
                 <div class="col-xs-12 col-lg-8 col-md-8 col-sm-8 col col-centered">
