--- a/views/admin-lte/discussion/editReplyModal.ejs
+++ b/views/admin-lte/discussion/editReplyModal.ejs
@@ -1,13 +1,14 @@
-<!-- course edit form -->
+<!-- reply form -->
 <div class="row">
-    <div class="modal" id="editReplyModal" tabindex="-1" role="dialog"
+    <div class="modal" id="<%= formName %>Modal" tabindex="-1" role="dialog"
          aria-labelledby="Reply Form" aria-hidden="true">
+
         <section class="content" ng-controller="ReplyController">
             <div class="row row-centered">
                 <div class="col-xs-12 col-lg-8 col-md-8 col-sm-8 col col-centered">
                     <div class="widget-item box no-border no-round">
                         <div class="box-header with-border">
-                            <h3 class="box-title">Edit Reply</h3>
+                            <h3 class="box-title"><%= formTitle %> Reply</h3>
 
                             <div class="box-tools pull-right">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"
@@ -16,21 +17,14 @@
                             </div>
                         </div>
                         <div class="box-body">
-                            <form name="editReplyForm" role="form" ng-submit="saveEditReply(editReplyForm.$valid)"
+                            <form name="<%= formName %>Form" role="form"
+                                  ng-submit="<%= actionMethod%>(<%= formName %>Form.$valid)"
                                   novalidate>
                                 <fieldset>
                                     <div class="control-group">
-                                        <label class="control-label">Content</label>
 
                                         <div class="controls">
-                                            <wysiwyg textarea-id="Content"
-                                                     textarea-class="form-control"
-                                                     textarea-height="180px"
-                                                     textarea-name="Content"
-                                                     textarea-required
-                                                     ng-model="formData.content"
-                                                     textarea-menu="menu">
-                                            </wysiwyg>
+                                            <div id="<%= formName %>Content" name="content" ng-model="<%= formTitle %>FormData.content" quill></div>
                                         </div>
                                     </div>
 
@@ -39,7 +33,8 @@
                                         <error-block ng-show="errors.length > 0" messages="errors"></error-block>
                                         <!-- Button -->
                                         <div class="controls">
-                                            <button class="btn btn-primary" ng-click="editReplyForm.$setDirty()">Save
+                                            <button class="btn btn-primary" ng-click="<%= formName %>Form.$setDirty()">
+                                                Save
                                                 <spinner show="isLoading"></spinner>
                                             </button>
 
