--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -109,8 +109,11 @@
     </div>
 
     <% include addNewTopicModal %>
-    <% include addNewReplyModal %>
     <% include editTopicModal %>
+
+    <% var formName= 'addNewReply'; var formTitle = 'Add'; var actionMethod = 'saveNewReply'; %>
+    <% include editReplyModal %>
+    <% var formName= 'editReply'; var formTitle = 'Edit'; var actionMethod = 'saveEditReply';  %>
     <% include editReplyModal %>
 
 </div>
