completed refactoring reply modal

--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -112,8 +112,8 @@
     <% include editTopicModal %>
 
     <% var formName= 'addNewReply'; var formTitle = 'Add'; var actionMethod = 'saveNewReply'; %>
-    <% include editReplyModal %>
+    <% include replyModal %>
     <% var formName= 'editReply'; var formTitle = 'Edit'; var actionMethod = 'saveEditReply';  %>
-    <% include editReplyModal %>
+    <% include replyModal %>
 
 </div>
