topic forms is with quill

--- a/views/admin-lte/discussion/addNewTopicModal.ejs
+++ b/views/admin-lte/discussion/addNewTopicModal.ejs
@@ -37,17 +37,8 @@
                                     <br>
 
                                     <div class="control-group">
-                                        <label class="control-label">Content</label>
-
                                         <div class="controls" >
-                                            <wysiwyg textarea-id="Content"
-                                                     textarea-class="form-control"
-                                                     textarea-height="180px"
-                                                     textarea-name="Content"
-                                                     textarea-required
-                                                     ng-model="formData.content"
-                                                     textarea-menu="menu" >
-                                            </wysiwyg>
+                                            <div id="addTopicContent" name="content" ng-model="formData.content" quill></div>
 
                                         </div>
                                     </div>
