--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -42,7 +42,7 @@
     <ul ng-controller="ActionBarController">
         <li ng-show="enrolled || isOwner">
             <a style="cursor: pointer;"
-               data-toggle="modal" data-target="#addNewLinksModal"
+               data-toggle="modal" data-target="#AddLinksModal"
                title="Add New Link">
                 <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW LINK</a>
         </li>
