--- a/views/admin-lte/discussion/addNewTopicModal.ejs
+++ b/views/admin-lte/discussion/addNewTopicModal.ejs
@@ -52,11 +52,7 @@
                                                 <spinner show="isLoading"></spinner>
                                             </button>
 
-                                            <button type="button" class="btn btn-warning"
-                                                    data-dismiss="modal" aria-label="Close"
-                                                    ng-click="cancel()">
-                                                <span aria-hidden="true">Cancel</span>
-                                            </button>
+                                            <cancel></cancel>
                                         </div>
                                     </div>
                                 </fieldset>
