--- a/views/admin-lte/links/addNewLinksModal.ejs
+++ b/views/admin-lte/links/addNewLinksModal.ejs
@@ -1,51 +1,65 @@
 <!-- course edit form -->
 <div class="row">
-    <div class="modal" id="addNewLinksModal" tabindex="-1" role="dialog"
-         aria-labelledby="Add New Link" aria-hidden="true">
+    <div class="modal" id="<%= operation %>LinksModal" tabindex="-1" role="dialog"
+         aria-labelledby="<%= operation %> Link" aria-hidden="true">
         <section class="content">
             <div class="row row-centered">
                 <div class="col-xs-12 col-lg-8 col-md-8 col-sm-8 col col-centered">
                     <div class="widget-item box no-border no-round">
                         <div class="box-header with-border">
-                            <h3 class="box-title">Add A New Link</h3>
+                            <h3 class="box-title"><%= operation %> Link</h3>
 
-                            <div class="box-tools pull-right">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
-                            </div>
+                            <modal-close></modal-close>
                         </div>
                         <div class="box-body">
-                            <form class="" role="form" ng-submit="saveNewPost()">
+                            <form name="<%= operation %>LinkForm" role="form" ng-submit="<%= actionMethodName %>(<%= operation %>LinkForm.$valid)"
+                                  novalidate>
                                 <fieldset>
                                     <div class="control-group">
                                         <label class="control-label" for="title">Title</label>
+
                                         <p class="help-block">Title can contain any letters or numbers</p>
-                                        <div class="controls">
-                                            <input type="text" id="title" name="title" placeholder="" class="form-control"
-                                                   ng-model="formData.title">
+
+                                        <div class="controls"
+                                             ng-class="{ 'has-error' : <%= operation %>LinkForm.title.$invalid && !<%= operation %>LinkForm.$pristine }">
+                                            <input type="text" id="title" name="title" placeholder=""
+                                                   class="form-control"
+                                                   ng-model="<%= variableContainer %>.title"
+                                                   ng-required="true" required>
+
+                                            <p ng-show="<%= operation %>LinkForm.title.$invalid && !<%= operation %>LinkForm.$pristine"
+                                               class="help-block">A link must contain title</p>
                                         </div>
                                     </div>
                                     <br>
+
                                     <div class="control-group">
                                         <label class="control-label">Link</label>
+
                                         <p class="help-block">Link must start with http:// or https://</p>
-                                        <div class="controls">
-                                            <input type="text" id="link" name="link" placeholder="http://" class="form-control"
-                                                   ng-model="formData.content">
+
+                                        <div class="controls"
+                                             ng-class="{ 'has-error' : <%= operation %>LinkForm.content.$invalid && !<%= operation %>LinkForm.content.$pristine && <%= variableContainer %>.content.length >= 4}">
+
+                                        <input type="url" id="link" name="content" placeholder="http://"
+                                                   class="form-control"
+                                                   ng-model="<%= variableContainer %>.content"
+                                               ng-required="true" required>
+
+                                            <p ng-show="<%= operation %>LinkForm.content.$invalid && !<%= operation %>LinkForm.content.$pristine && <%= variableContainer %>.content.length >= 4"
+                                               class="help-block">A link must contain a URL</p>
                                         </div>
                                     </div>
 
                                     <div class="control-group">
                                         <br class="clear">
-                                        <span class="help-block" ng-show="errors">{{ errors }}</span>
+                                        <error-block ng-show="errors.length > 0" messages="errors"></error-block>
                                         <!-- Button -->
                                         <div class="controls">
-                                            <button class="btn btn-md btn-primary">Save</button>
-                                            <button type="button" class="btn btn-md btn-primary"
-                                                    data-dismiss="modal" aria-label="Close"
-                                                    ng-click="cancel()">
-                                                <span aria-hidden="true">Cancel</span>
+                                            <button class="btn btn-primary" ng-click="<%= operation %>LinkForm.$setDirty()">Save
+                                                <spinner show="isLoading"></spinner>
                                             </button>
+                                            <cancel></cancel>
                                         </div>
                                     </div>
                                 </fieldset>
