--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -42,16 +42,18 @@
 
                                     <div class="control-group">
                                         <p></p>
-                                    <!-- Username -->
-                                    <label class="control-label" for="displayName">Display Name</label>
-                                    <p class="help-block">Display Name will be the name that will be displayed through out the site</p>
+                                        <!-- Username -->
+                                        <label class="control-label" for="displayName">Display Name</label>
 
-                                    <div class="controls">
-                                        <input type="text" id="displayName" name="displayName" placeholder=""
-                                               class="form-control" ng-model="user.displayName">
+                                        <p class="help-block">Display Name will be the name that will be displayed
+                                            through out the site</p>
 
+                                        <div class="controls">
+                                            <input type="text" id="displayName" name="displayName" placeholder=""
+                                                   class="form-control" ng-model="user.displayName">
+
+                                        </div>
                                     </div>
-                                </div>
 
                                     <div class="control-group">
                                         <p></p>
@@ -82,7 +84,8 @@
                                     <div class="control-group">
                                         <p></p>
                                         <!-- Password -->
-                                        <label class="control-label" for="passwordConfirm">New Password (Confirm)</label>
+                                        <label class="control-label" for="passwordConfirm">New Password
+                                            (Confirm)</label>
 
                                         <div class="controls">
                                             <p class="help-block">Please confirm password</p>
