add element resize min-height on start up

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -68,5 +68,13 @@
 
         if (location.hash !== '')
             $(document).scrollTop(0);
+
+        //Get window height and the wrapper height
+        var neg = $('.main-header').outerHeight() + $('.main-footer').outerHeight();
+        var neg2= $('.content-header').outerHeight();
+        var window_height = $(window).height();
+        //Set the min-height of the content and sidebar based on the
+        //the height of the document.
+        $(".content-wrapper #courseTabs").css('min-height', window_height - neg - neg2 - neg2);
     });
 </script>
