rename edit/add links modal

--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -55,8 +55,8 @@
     </div>
 
     <% var operation = 'Add'; var actionMethodName = 'saveNewPost'; var variableContainer = 'formData'; %>
-    <% include addNewLinksModal %>
+    <% include linksModal %>
     <% var operation = 'Edit'; var actionMethodName = 'saveEditPost'; var variableContainer = 'currentLink'; %>
-    <% include addNewLinksModal %>
+    <% include linksModal %>
 
 </div>
