showing picture in course list

--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -46,7 +46,7 @@
                                     <a href="/course/{{c.slug}}/#/cid/{{c._id}}" class="box-title">{{c.name}}</a>
                                 </div>
                                 <div class="box-body" style="text-align: center">
-                                    <!--<img ng-show="c.picture" src="{{c.picture}}">-->
+                                    <img class="course-picture" ng-show="c.picture" ng-src="{{c.picture}}">
                                     <img ng-hide="c.picture" src="/img/default-tree.png">
                                 </div>
                             </div>
