add player in course preview

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -20,6 +20,10 @@
 
     <!-- <link href="/jquery/jsplumb.css" rel="stylesheet"> -->
 
+    <!-- videogular -->
+    <link rel="stylesheet" type="text/css" href="/videogular-themes-default/videogular.css">
+    <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css" />
+ 
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
