--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -82,6 +82,21 @@
 
 <div class="videoPlayerWrapper" ng-show="course.video && isPlaying" ng-click="stopVideo()">
 <div class="videoPlayerContainer" ng-click="$event.stopPropagation()">
-    <video src="{{course.video}}" id="videoPlayer"></video>
+    <videogular vg-cue-points="cuePoints">
+        <vg-media vg-src="videoSources"></vg-media>
+        <vg-controls>
+            <vg-play-pause-button></vg-play-pause-button>
+            <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
+            <vg-scrub-bar>
+                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+            </vg-scrub-bar>
+            <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
+            <vg-volume>
+                <vg-mute-button></vg-mute-button>
+                <vg-volume-bar></vg-volume-bar>
+            </vg-volume>
+            <vg-fullscreen-button></vg-fullscreen-button>
+        </vg-controls>
+    </videogular>
     </div>
 </div>
