--- a/views/slide-viewer/header.ejs
+++ b/views/slide-viewer/header.ejs
@@ -14,7 +14,7 @@
     <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" tyle="text/css" />
     <link rel="icon" href="/favicon.png" type="image/png" />
 
-
+    <!--init-->
 
     <!-- Themes -->
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
