preperation for slide annotation zone update

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -23,11 +23,13 @@
                   <div class="box-body with-border">
                     <h3 class="">Slides</h3>
                     <div class="pannel box box-primary slideWrapper">
+
                       <div id="viewerWrapper">
+                        <sa-annotationzone></sa-annotationzone>
                         <div id="viewerContainer">
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
-                        <div id="annotationZone"></div>
+                        <div id="annotationZonke"></div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress">
                             <div id="slideNavigationCurrentProgress"></div>
