--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -38,6 +38,8 @@
 <script src="/video-annotations/scripts/directives/va-widget/va-widget.js"></script>
 <script src="/video-annotations/scripts/directives/va-widget/va-widget-controller.js"></script>
 -->
+
+<script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/video-annotations/va.js"></script>
 
 <script src="/angular/courseMapper.js"></script>
@@ -45,5 +47,3 @@
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 <script src="/admin-lte/js/libs.js" type="text/javascript"></script>
-
-
