some tests with new rectangles

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -25,11 +25,14 @@
                     <div class="pannel box box-primary slideWrapper">
 
                       <div id="viewerWrapper">
-                        <sa-annotationzone></sa-annotationzone>
+
                         <div id="viewerContainer">
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
-                        <div id="annotationZonke"></div>
+                        <div sa-annotationzone id="annotationZone">
+                          <div  movable style="background-color:red;height:100px;width:100px;"></div>
+
+                        </div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress">
                             <div id="slideNavigationCurrentProgress"></div>
