--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -29,8 +29,8 @@
                         <div id="viewerContainer">
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
-                        <div sa-annotationzone id="annotationZone">
-                          <div  movable style="background-color:red;height:100px;width:100px;"></div>
+                        <div sa-annotationzone id="annotationZone" ng-transclude>
+                          <div  movable style="background-color:red;top:100px;height:100px;width:100px;"></div>
 
                         </div>
                         <div id="slideNavigationWrapper">
