--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -29,9 +29,8 @@
                         <div id="viewerContainer">
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
-                        <div sa-annotationzone id="annotationZone" ng-transclude>
-                          <div  movable style="background-color:red;top:100px;height:100px;width:100px;"></div>
-
+                        <div id="annotationZone" >
+                          <div  sa-annotationzone></div>
                         </div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress">
