--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -29,8 +29,8 @@
                         <div id="viewerContainer">
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
-                        <div id="annotationZone" >
-                          <div  sa-annotationzone></div>
+                        <div id="annotationZone">
+                          <div movable style="background-color:yellow;height:100px;width:100px;" ></div>
                         </div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress">
