--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -30,7 +30,7 @@
                             <div id="viewer" class="pdfViewer"></div>
                         </div>
                         <div id="annotationZone">
-                          <div movable style="background-color:yellow;height:100px;width:100px;" ></div>
+                          <!--<div movable style="background-color:yellow;height:100px;width:100px;" ></div>-->
                         </div>
                         <div id="slideNavigationWrapper">
                           <div id="slideNavigationProgress">
@@ -107,6 +107,10 @@
                              <!-- Will be filled when annotation zones are created -->
                              <div id="annotationZoneSubmitList">
                              </div>
+                             <div id="annotationZoneSubmitListMovables">
+                               <button class="btn btn-default" onclick="createMovableAnnZone();">Add Annotation Zone</button>
+                             </div>
+
 
                              <div class="control-group">
                                <div class="controls">
